# gSOAP

./: GPLv2_license.txt  INSTALL.txt  LICENSE.txt  Makefile  Makefile.am  Makefile.in  NOTES.txt  README.txt  aclocal.m4  changelog.html  changelog.md  config.h  config.h.in  config.status  configure  configure.ac  configure.in  gsoap++.pc  gsoap++.pc.in  gsoap.pc  gsoap.pc.in  gsoapck++.pc  gsoapck++.pc.in  gsoapck.pc  gsoapck.pc.in  gsoapssl++.pc  gsoapssl++.pc.in  gsoapssl.pc  gsoapssl.pc.in  makemake
gsoap/samples/: Makefile  Makefile.am  Makefile.c_rules  Makefile.cpp_proxy_rules_j  Makefile.defines  Makefile.in  README.txt
gsoap/samples/async/: Makefile  Makefile.am  Makefile.in  README.txt  async.h  asyncrest.c  asyncrest.cpp  asyncrest2.c  asyncrest2.cpp  asyncrest3.c  asyncrest3.cpp  asyncsoap.c  asyncsoap.cpp  asyncsoap2.c  asyncsoap2.cpp  asyncsoap3.c  asyncsoap3.cpp
gsoap/samples/atom/: Makefile  Makefile.am  Makefile.in  README.txt  atom.cpp  atom.h
gsoap/samples/autotest/: LICENSE.txt  Makefile.am  Makefile.in  README.txt  test-patterns11.sh  test-patterns12.sh  test-self.sh
gsoap/samples/aws/: Makefile.am  Makefile.in  README.txt  aws-s3.cpp  aws-s3.h
gsoap/samples/calc/: Makefile.in  calcclient.c  calcserver.c
gsoap/samples/calc++/: Makefile.in  calcclient.cpp  calcserver.cpp
gsoap/samples/calc_vs2005/: README.txt
gsoap/samples/calc_xcode/: calc.nsmap  calcclient.cpp  soapC.cpp  soapH.h  soapStub.h  soapcalcProxy.cpp  soapcalcProxy.h
gsoap/samples/chaining/: Makefile  Makefile.am  Makefile.in  chaining.c  env.h  fault.h  qServer.c
gsoap/samples/chaining++/: CalcC.cpp  CalcH.h  CalcStub.h  CalccalcService.cpp  CalccalcService.h  Makefile  Makefile.am  Makefile.in  QuoteC.cpp  QuoteH.h  QuoteStub.h  QuotequoteService.cpp  QuotequoteService.h  calc.add.req.xml  calc.add.res.xml  calc.div.req.xml  calc.div.res.xml  calc.h  calc.mul.req.xml  calc.mul.res.xml  calc.nsmap  calc.pow.req.xml  calc.pow.res.xml  calc.sub.req.xml  calc.sub.res.xml  chaining  chaining.cpp  chaining2.cpp  envC.cpp  envH.h  envStub.h  h.xsd  header.h  ns.xsd  quote.getQuote.req.xml  quote.getQuote.res.xml  quote.nsmap  quote.wsdl
gsoap/samples/curl/: Makefile  README.txt  calc.h  curl-json-currentTime.c  curlclient.c  curlclient.cpp  curlrest.c
gsoap/samples/databinding/: Makefile.am  Makefile.in  README.md  README.txt  address.cpp  address.h  address.xsd
gsoap/samples/dime/: Makefile.in  dime.h  dimeclient.cpp  dimeserver.cpp
gsoap/samples/dom/: Makefile.am  Makefile.in  README.md  dom2calc.cpp  dom2calc.h  domcpp.cpp
gsoap/samples/factory/: Makefile.in  factory.cpp  factory.h
gsoap/samples/factorytest/: Makefile.in  factorytest.cpp  factorytest.h
gsoap/samples/gmt/: Makefile.am  Makefile.in  gmtclient.cpp  gmtserver.cpp
gsoap/samples/googleapi/: GoogleDirections.hpp  GoogleDistanceMatrix.h  GoogleDistanceMatrix.hpp  Makefile.am  Makefile.in  README.md  README.txt  gdm.cpp  gdm.hpp  gdx.cpp  googleapi.h
gsoap/samples/hello/: Makefile.in  helloclient.cpp  helloserver.cpp
gsoap/samples/httpcookies/: Makefile.in  ck.h  ckclient.cpp  ckserver.cpp
gsoap/samples/link/: env.h  fault.h  header.h  xmas.c  xmas.h
gsoap/samples/link++/: Makefile  gmt.h  xmas.cpp  xmas.hpp
gsoap/samples/lu/: Makefile.in  lu.h  luclient.cpp  lumat.cpp  luserver.cpp
gsoap/samples/magic/: Makefile.in  magic.cpp  magic.h  magicserver.cpp
gsoap/samples/mashup/: Makefile.am  Makefile.in  README.txt  calc.wsdl  gmt.wsdl  mashup.h  mashupclient.c  mashupserver.c
gsoap/samples/mashup++/: Makefile.am  Makefile.in  README.txt  calc.wsdl  gmt.wsdl  mashup.hpp  mashupclient.cpp  mashupserver.cpp  t.wsdl
gsoap/samples/mtom/: Makefile.in  mtom-test.c  mtom-test.h
gsoap/samples/mtom-stream/: Makefile.in  mtom-stream-test.c  mtom-stream-test.h
gsoap/samples/oneway/: Makefile.in  event.c  handler.c
gsoap/samples/oneway++/: Makefile.in  event.cpp  event.h  handler.cpp
gsoap/samples/polytest/: Makefile.in  polymorph.cpp  polymorph.h
gsoap/samples/primes/: Makefile  Makefile.am  Makefile.in  README.txt  primes.cpp  simple_vector.h  soapC.cpp  soapH.h  soapStub.h
gsoap/samples/rest/: Makefile  Makefile.am  Makefile.in  README.txt  calcrest.c  calcrest.h  httpgettest.c  httpposttest.c  person.c  person.cpp  person.h
gsoap/samples/roll/: Makefile.in  rollclient.cpp
gsoap/samples/router/: Makefile.in  router.c  router.h
gsoap/samples/rss/: Makefile.in  README.txt  rss.c  rss.h
gsoap/samples/ssl/: Makefile.am  Makefile.in  README.txt  cacert.pem  cacerts.pem  cert.sh  client.pem  dh1024.pem  dh2048.pem  dh4096.pem  openssl.cnf  root.sh  server.pem  servercert.pem  ssl.h  ssl.wsdl  ssl_setup.c  ssl_setup.cpp  ssl_setup.h  sslclient.c  sslserver.c
gsoap/samples/tcp/: Makefile.am  Makefile.in  README.txt  server.pem  tcpclient-json.c  tcpclient-json.cpp  tcpclient-tls.c  tcpclient-tls.cpp  tcpclient.c  tcpclient.cpp  tcpdemo.h  tcpserver-json.c  tcpserver-json.cpp  tcpserver-tls.c  tcpserver-tls.cpp  tcpserver.c  tcpserver.cpp
gsoap/samples/template/: Makefile.in  README.txt  primes.cpp  primes.h  simple_vector.h
gsoap/samples/testmsgr/: Makefile  Makefile.am  Makefile.in  README.md  testmsgr.cpp
gsoap/samples/udp/: Makefile.in  udp.h  udp.wsdl  udpclient.c  udpserver.c
gsoap/samples/varparam/: Makefile.in  README.txt  varparam.cpp  varparam.h
gsoap/samples/webserver/: Makefile  cacert.pem  cacerts.pem  client.pem  opt.h  options.c  options.h  person.xml  server.pem  test.html  webserver.c  webserver.h
gsoap/samples/wsa/: Makefile.am  Makefile.in  README.txt  wsademo.c  wsademo.h
gsoap/samples/wsrm/: Makefile.am  Makefile.in  README.txt  cacert.pem  server.pem  (+2 more)
gsoap/wsdl/: Make_mvc.mak  Makefile  Makefile.am  Makefile.in  MakefileManual  README.txt  bpel.cpp  bpel.h  dime.h  gwsdl.h  http.h  imports.h  includes.h  mime.cpp  mime.h  schema.cpp  schema.h  sd.nsmap  service.cpp  service.h  soap.cpp  soap.h  sp.h  types.cpp  types.h  wadl.cpp  wadl.h  wsam.h  wsdl.cpp  wsdl.h  wsdl2h  wsdl2h.cpp  wsdlC.cpp  wsdlH.h  wsdlStub.h  wsp.cpp  wsp.h  wsrmp.h  wst.h  wsu.h  (+1 more)
(+2744 files in other folders)
